--- a/todo.txt
+++ b/todo.txt
@@ -20,3 +20,5 @@ show loader only when necessary
 user profile image/post image to default if the avatar url returns 404
 
 Enlarge images when clicked
+
+Image placeholer/loader (see youtube web dev simplified)
