--- a/todo.txt
+++ b/todo.txt
@@ -22,3 +22,5 @@ user profile image/post image to default if the avatar url returns 404
 Enlarge images when clicked
 
 Image placeholer/loader (see youtube web dev simplified)
+
+use custom hook for time passed / date fetcher
